@@ -4,10 +4,11 @@ Hash: SHA256
 DIST otopi-1.0.1.tar.gz 457883 SHA256 c82df4572fecba568677704a8fc5831e7d7b5c393b3aad9fafd81e166154c8bd SHA512 8863181514a381dd34074eb7c1d7ec7c6efaba8d421f20b9e9698c8fe4738d67e8f89edab4d87790de22507867aa90b01157fb2b0c91a5cb468067c7fc2f7d1f WHIRLPOOL 26fa7f309ca1447438e20831087b1fb53e769f61456093951cd2b464cc314c4baa4f344c99df37bad9b080a756e0b0b213295a82a772340f6e94f4f28b59184c
 DIST otopi-1.1.2.tar.gz 283087 SHA256 7e71dc6d92dba59cf5a9869cf09b3185b9c89b4339810b42d7720105f288bc4c SHA512 ecb0201b28b057fc2c1d952c677f3ed97ae85b3152d792fcd0b5f361f8f2cd5403b5235ba6ccef7e2d2853653ad83532094d1ca1c94568e80a83ee53021bb927 WHIRLPOOL 62e516679a3d434e42adbd00a47a3732680cca2eeff9297e8b5df5cb6907d6bf4dcb2451140ad1c60e56dab59b45a70de1cf6c715f76697c23d26c0f613107cd
 DIST otopi-1.1.3.tar.gz 283382 SHA256 5e139520e3ea9ceb97e86e50983ec465c73db3e71733d04024d72c09f5ba91a9 SHA512 c82d2e51b7c453c022cc0e3a3f5535f0b30d13d1eb97888aa19ec08da21c79eb66e975d2b37d0ad475f3c4d09e9d65ebd6da1fb87a469934ef538da3811f0443 WHIRLPOOL de83decf5f0f2656789f3e4ec112154c46e05186fbf1adcb1b6dc5bed468f7d849d0372b76a8294637c0f9edaec478b28a571964981f4b973dd1c37bcd0dbcb1
+DIST otopi-1.1.4.tar.gz 283406 SHA256 ae0dc0c7af3624944689062b51c56121e8b045df364a047b84c7a536125ffe9f SHA512 54511260bf1141f0715ca71a6bd0b82c292f5297c10aa66bc9024af67019934fe4ac1e7d8ec6e04508e5b7ac60244786088bb7f4f81e71b95f0eacb278c9b653 WHIRLPOOL ad4be69af485577c30262d256ce4214cd8fbc0754c9e38900a8a7f2dfedde326d1356fd7cbfbce5ab782404de02b1ed53bdbd08957228a416bb1bb54d04592ff
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlMV+XgACgkQXYk9GL8g3FGNUgD8CXNN6HIyjmlaefZ6+062L35E
-IzrnO4jna6BWDicWyhwBAJvsmA408zUPsBs2mchxw8+280Ojd070rTQ93lC14SPK
-=j3/z
+iF4EAREIAAYFAlMV+fIACgkQXYk9GL8g3FGsRwEAl0dBcIn7qotQgaXgXfDICMKp
+4rOXpS1H5MNCOF+6TN0A/iBNbmKBhuX1TSEEHx+GFB7iEQ5NuuzxoGWppRl1j9kH
+=tdnO
 -----END PGP SIGNATURE-----
