@@ -1,3 +1,8 @@
+*otopi-1.1.4 (04 Mar 2014)
+
+  04 Mar 2014; Alon Bar-Lev <alonbl@gentoo.org> +otopi-1.1.4.ebuild:
+  Version bump
+
 *otopi-1.1.3 (04 Mar 2014)
 
   04 Mar 2014; Alon Bar-Lev <alonbl@gentoo.org> +otopi-1.1.3.ebuild:
